# gkr-trading

./: .env.example  .gitignore  .mcp.json  AUDIT_REPORT.md  README.md  pyproject.toml
config/risk/: options_risk_policy.yaml
docs/: ALPACA_PAPER_ADAPTER.md  ORCHESTRATOR_SPEC.md
src/gkr_trading/: __init__.py
tests/: __init__.py  conftest.py  test_observation_plane.py  test_supabase_cache.py
tests/adversarial/: CORRECTNESS_HARDENING_MATRIX.md  REMEDIATION.md  VALIDATION_MATRIX.md  __init__.py  _streams.py  test_convergence_adversarial.py  test_correctness_layer_adversarial.py  test_data_cli_adversarial.py  test_portfolio_lifecycle_adversarial.py  test_replay_events_adversarial.py  test_risk_adversarial.py
tests/integration/: test_backtest_flow.py  test_model_convergence.py  test_paper_flow.py  test_paper_orchestrator.py
tests/unit/: test_alpaca_hardening.py  test_alpaca_options_adapter.py  test_alpaca_paper_adapter.py  test_alpaca_paper_mapping.py  test_broker_sync.py  test_continuous_session.py  test_correctness_hardening.py  test_events_serde.py  test_instruments.py  test_lifecycle_scaffold.py  test_new_intents.py  test_operator_cli.py  test_options_events_serde.py  test_options_lifecycle.py  test_options_risk_policy.py  test_order_model.py  test_paper_adapter_selection.py  test_paper_failure_reporting.py  test_paper_operator_report.py  test_pending_order_registry.py  test_portfolio.py  test_position_model.py  test_rejection_visibility.py  test_replay.py  test_risk.py  test_runtime_v2.py  test_session_supervisor.py  test_write_before_call.py
(+147 files in other folders)
