[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gkr-trading"
version = "0.1.0"
description = "V1 algorithmic trading platform — data and control planes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "pyyaml>=6.0"]

[project.scripts]
gkr = "gkr_trading.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
